Handling Missing Values

--- a/Titanic_Survival_Prediction.ipynb
+++ b/Titanic_Survival_Prediction.ipynb
@@ -289,7 +289,116 @@
    "cell_type": "markdown",
    "id": "5cd67e9a",
    "metadata": {},
-   "source": []
+   "source": [
+    "HANDLING THE MISSING VALUES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b86a2e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dropping the Cabin column from dataset.\n",
+    "titanic_dataset = titanic_dataset.drop(columns=\"Cabin\" , axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ca022611",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      22.000000\n",
+       "1      38.000000\n",
+       "2      26.000000\n",
+       "3      35.000000\n",
+       "4      35.000000\n",
+       "         ...    \n",
+       "886    27.000000\n",
+       "887    19.000000\n",
+       "888    29.699118\n",
+       "889    26.000000\n",
+       "890    32.000000\n",
+       "Name: Age, Length: 891, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Replacing the age column with mean value\n",
+    "#Inplace true is not necessary it seems because now by default it changes in place if it is mean.\n",
+    "titanic_dataset[\"Age\"].fillna(titanic_dataset[\"Age\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "03e74be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Replacing Embarked null with mode value\n",
+    "print(titanic_dataset[\"Embarked\"].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9b24fd31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic_dataset[\"Embarked\"].fillna(titanic_dataset[\"Embarked\"].mode()[0] , inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8e8afa97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId    0\n",
+       "Survived       0\n",
+       "Pclass         0\n",
+       "Name           0\n",
+       "Sex            0\n",
+       "Age            0\n",
+       "SibSp          0\n",
+       "Parch          0\n",
+       "Ticket         0\n",
+       "Fare           0\n",
+       "Embarked       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#To check the missing values now.\n",
+    "titanic_dataset.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
