Separating Target and Features

--- a/Titanic_Survival_Prediction.ipynb
+++ b/Titanic_Survival_Prediction.ipynb
@@ -367,7 +367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\admln\\AppData\\Local\\Temp\\ipykernel_20884\\1463744763.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\admln\\AppData\\Local\\Temp\\ipykernel_8128\\1463744763.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "480252f1",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "<Axes: xlabel='Survived', ylabel='count'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "39f9831f",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "<Axes: xlabel='Sex', ylabel='count'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4aa1c666",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
        "<Axes: xlabel='Sex', ylabel='count'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f14bf482",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "e797e199",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "75247dfd",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\admln\\AppData\\Local\\Temp\\ipykernel_20884\\3819490188.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\admln\\AppData\\Local\\Temp\\ipykernel_8128\\3819490188.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  titanic_dataset.replace({'Sex' : {'male' : 0 , 'female' : 1} ,'Embarked' : {'S' : 0 , 'C' : 1 , 'Q' : 2}} , inplace=True)\n"
      ]
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "02eaeb8d",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "4            373450   8.0500         0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,6 +924,91 @@
    "source": [
     "titanic_dataset.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d358e8f3",
+   "metadata": {},
+   "source": [
+    "SEPARATING FEATURES AND TARGET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "de34d5e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = titanic_dataset.drop(columns = [\"PassengerId\" , \"Name\" , \"Ticket\" , \"Survived\"] , axis = 1) \n",
+    "Y = titanic_dataset[\"Survived\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1218c41e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Pclass  Sex   Age  SibSp  Parch     Fare  Embarked\n",
+      "0         3    0  22.0      1      0   7.2500         0\n",
+      "1         1    1  38.0      1      0  71.2833         1\n",
+      "2         3    1  26.0      0      0   7.9250         0\n",
+      "3         1    1  35.0      1      0  53.1000         0\n",
+      "4         3    0  35.0      0      0   8.0500         0\n",
+      "..      ...  ...   ...    ...    ...      ...       ...\n",
+      "886       2    0  27.0      0      0  13.0000         0\n",
+      "887       1    1  19.0      0      0  30.0000         0\n",
+      "888       3    1   NaN      1      2  23.4500         0\n",
+      "889       1    0  26.0      0      0  30.0000         1\n",
+      "890       3    0  32.0      0      0   7.7500         2\n",
+      "\n",
+      "[891 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b2750487",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      0\n",
+      "1      1\n",
+      "2      1\n",
+      "3      1\n",
+      "4      0\n",
+      "      ..\n",
+      "886    0\n",
+      "887    1\n",
+      "888    0\n",
+      "889    1\n",
+      "890    0\n",
+      "Name: Survived, Length: 891, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "116424cd",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
