--- a/Titanic_Survival_Prediction.ipynb
+++ b/Titanic_Survival_Prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "id": "cbc8046d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn import metrics"
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -1525,12 +1525,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d96c3bf3",
+   "metadata": {},
+   "source": [
+    "MODEL EVALUATION"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "475eee50",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data_prediction = model.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b4adc0c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Accuracy :  0.8075842696629213\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Training Data Accuracy\n",
+    "print(\"Training Data Accuracy : \" , accuracy_score(train_data_prediction , Y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "61f5776b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data_prediction = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "94d2f929",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Data Accuracy :  0.7821229050279329\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test Data Prediction\n",
+    "print(\"Test Data Accuracy : \", accuracy_score(test_data_prediction,Y_test))"
+   ]
   }
  ],
  "metadata": {
